@@ -1,20 +1,6 @@
-cover_db
-META.yml
-Makefile
-blib
-inc
-pm_to_blib
-MANIFEST
-Makefile.old
-nytprof.out
-MANIFEST.bak
-*.sw[po]
-.carton/
-carton.lock
-local/
-*~
-junk/
-MYMETA.json
-MYMETA.yml
-*.bak
-*.gz
+/Teng-Row-Declare-Relationship-*
+/.build
+/_build*
+/Build
+MYMETA.*
+!META.json
