@@ -1,0 +1,3 @@
+use 5.010001;
+use Module::Build::Tiny 0.019;
+Build_PL();
