@@ -1,27 +1,0 @@
-This is Perl module Teng::Row::Declare::Relationship.
-
-INSTALLATION
-
-Teng::Row::Declare::Relationship installation is straightforward. If your CPAN shell is set up,
-you should just be able to do
-
-    % cpan Teng::Row::Declare::Relationship
-
-Download it, unpack it, then build it as per the usual:
-
-    % perl Makefile.PL
-    % make && make test
-
-Then install it:
-
-    % make install
-
-DOCUMENTATION
-
-Teng::Row::Declare::Relationship documentation is available as in POD. So you can do:
-
-    % perldoc Teng::Row::Declare::Relationship
-
-to read the documentation online with your favorite pager.
-
-hayajo
