@@ -1,4 +1,0 @@
-[TestingAndDebugging::ProhibitNoStrict]
-allow=refs
-
-[-Subroutines::ProhibitSubroutinePrototypes]
