@@ -1,4 +1,7 @@
-Revision history for Perl extension Teng::Row::Declare::Relationship
+Revision history for Teng-Row-Declare-Relationship
+
+{{$NEXT}}
+        - millaize
 
 0.01
         - original version
